<resources>
    <string name="app_name">TaskMaster</string>
    <string name="add_task_button">ADD TASK</string>
    <string name="all_task_button">ALL TASK</string>
    <string name="setting">setting</string>
    <string name="lab27">lab27</string>
    <string name="lab26">lab26</string>
    <string name="lab28">lab28</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet quam nisl,
                 non consequat risus tempus sed. Ut consectetur odio nulla, id cursus risus ultricies ac."
                 Aliquam sed ornare dolor. Donec bibendum nibh id nibh gravida, id cursus mauris malesuada"
                . Vestibulum cursus felis magna, quis eleifend sem dignissim a. Phasellus eget commodo neque.
                 Vestibulum dui orci, faucibus ac tortor nec, aliquam auctor diam. Mauris id erat orci. Nam"
                 pharetra sagittis euismod. Quisque imperdiet tellus in finibus volutpat. Donec pretium
                 imperdiet semper. Ut augue sapien, semper ut imperdiet ac, venenatis eget dolor. Aliquam
                id sem ante. Quisque quis purus molestie, vehicula tortor nec, vehicula lectus. Aenean
                 et dolor non nisl suscipit sollicitudin quis sed massa. Sed sem lorem, hendrerit vitae
                 volutpat et, bibendum ac sem.</string>
    <string name="EnterUsername">enter Username</string>
    <string name="username">username</string>

    <string-array name="teams_numbers">
        <item>team 1</item>
        <item>team 2</item>
        <item>team 3</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_prompt" />
    <string name="title_activity_sign_up" />
    <string name="label_enter_code" />
    <string name="upload">upload(opt)</string>
    <string name="interAd">Ad page</string>
    <string name="rewardAd">reward</string>

</resources>